<resources>
    <string name="app_name">AndroidLearners</string>
    <string name="tab_text_1">Java</string>
    <string name="tab_text_2">Kotlin</string>
    <string name="tab_text_3">Fovorites</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello Welcome to Android Learners: %1$d</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_reference">ReferenceActivity</string>
    <string name="referenceActivityTextHeading">Android Development References</string>
    <string name="referenceActivityReferenceLink1">https://developer.android.com/</string>
    <string name="referenceActivityReferenceLink2">https://android-arsenal.com/</string>
    <string name="referenceActivityReferenceLink3">https://www.udacity.com/courses/android</string>
    <string name="referenceActivityReferenceLink4">https://www.udemy.com/learn-by-doing-android-for-beginners/</string>

    <string name="count">0</string>
    <string name="amount">0$</string>

</resources>
